# Minetest

./: CMakeLists.txt  README.me  buildspec.yml  debug.txt  minetest.conf
games/mineclone2/: game.conf
games/minetest_game/: game.conf
worlds/Shubham/: auth.sqlite  env_meta.txt  map_meta.txt  mod_storage.sqlite  players.sqlite  world.mt
worlds/my_test_world/: auth.sqlite  env_meta.txt  map_meta.txt  mod_storage.sqlite  players.sqlite  world.mt
